--- a/src/style.css
+++ b/src/style.css
@@ -225,7 +225,7 @@ ul, ul, li {
 
 .services__content__description__btn::before {
     content: '';
-    background-image: url(/assets/icons/arrow.svg);
+    background-image: url(./../assets/icons/arrow.svg);
     width: 7px;
     height: 10px;
 
