--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,9 @@ ul, ul, li {
 .hidden {
     display: none !important;
 }
+.no-scroll {
+    overflow: hidden;
+}
 
 .button-readmore,
 .title__button,
@@ -270,13 +273,20 @@ ul, ul, li {
 /* ----- ASIDE ----- */
 
 .container__aside {
+    position: fixed;
+	left: 0;
+	top: 0;
+    
     box-sizing: border-box;
     width: 320px;
     height: 100vh;
     max-height: 1024px;
     padding: 18px 24px 32px 24px;
+
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
-    position: relative;
+    
+    z-index: 99;
+    background-color: white;
 }
 
 .aside__header {
@@ -372,6 +382,23 @@ ul, ul, li {
     color: #7E7E82;
 }
 
+
+
+.blur-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 98;
+
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(8px);
+    overflow-y: hidden;
+}
+
+
+
 @media (max-height: 790px) {
     .container__aside {
         overflow:scroll;
@@ -379,6 +406,9 @@ ul, ul, li {
     .aside__footer {
         position: static;
     }
+}
+@media (max-width: 1140px) {
+    
 }
 
 /* ----- Media ----- */
@@ -433,7 +463,7 @@ ul, ul, li {
         display: none;
      }
 
-     .header__button {
+     .services__title__buttons-row .header__button {
         display: flex;
         align-items: center;
         gap: 0.7rem;
