--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,8 @@ ul, ul, li {
 
 .button-readmore,
 .title__button,
-.header__button {
+.header__button,
+.card-button {
     border: none;
     background: none;
     cursor: pointer;
@@ -117,8 +118,12 @@ ul, ul, li {
 
 
 /* ----- MAIN ----- */
+.main {
+    position: relative;
+}
 .services {
     background-color: var(--background-color);
+    padding-bottom: 24px;
 }
 
 .services__title {
@@ -275,16 +280,16 @@ ul, ul, li {
 
 /* ----- ASIDE ----- */
 
-.container__aside {
+.aside__container {
     position: fixed;
 	left: 0;
 	top: 0;
     
     box-sizing: border-box;
-    width: 320px;
+    min-width: 320px;
     height: 100vh;
     max-height: 1024px;
-    padding: 18px 24px 32px 24px;
+    padding: 18px 0 32px 0;
 
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     
@@ -297,6 +302,8 @@ ul, ul, li {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .aside__header {
@@ -311,7 +318,9 @@ ul, ul, li {
     gap: 1rem;
 }
 
-.aside__menu__link {
+.aside__menu__item__link {
+    display: inline-block;
+    width: 100%;
     color: #1B1C21;
     font-size: 16px;
     line-height: 24px;
@@ -319,26 +328,26 @@ ul, ul, li {
     text-decoration: none;
 }
 
-.aside__menu__link:hover {
+.aside__menu__item__link:hover {
     color: #7E7E82;
 }
 
-.aside__menu__li {
+.aside__menu__item {
     margin-bottom: 2rem;
 }
 
 .active-link {
     color: #7E7E82;
 }
-.active-link::before {
+.aside__menu__item__link.active-link::before {
     content: '';
     position: absolute;
-    left: -4px;
+    left: 0px;
     margin-top: -4px;
-    width: 8px;
+    width: 4px;
     height: 32px;
     background-color: #41F6D7;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .aside__content__wrapper {
@@ -363,12 +372,16 @@ ul, ul, li {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.2px;
+    text-decoration: none;
+    color: inherit;
 }
 
 .aside__footer__contacts__phone {
     font-weight: bold;
     font-size: 24px;
     line-height: 32px;
+    text-decoration: none;
+    color: inherit;
 }
 
 .aside__footer__language {
@@ -408,18 +421,18 @@ ul, ul, li {
 }
 
 @media (max-height: 790px) {
-    .container__aside {
+    .aside__container {
         overflow: scroll;
     }
 }
 @media (max-width: 1119px) {
-    .container__aside {
+    .aside__container {
         display: none;
     }
 }
 
 @media (min-width: 1119px) {
-    .container__aside {
+    .aside__container {
         position: static;
         box-shadow: none;
         overflow: visible;
