--- a/src/style.css
+++ b/src/style.css
@@ -95,11 +95,16 @@ ul, ul, li {
 .buttons-row__tablet-width::after {
     content: '';
     position: absolute;
-    margin: 6px 20px;
+    margin: 6px 174px;
     width: 2px;
     height: 32px;
     background-color: #EAEAEA;
     border-radius: 1px;
+}
+
+.buttons-row__mobile-width {
+    display: flex;
+    align-items: center;
 }
 
 .header__button:hover {
@@ -115,6 +120,43 @@ ul, ul, li {
 * + .header__button  {
     margin-left: 16px;
 }
+
+.header__button {
+    width: 40px;
+    height: 40px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+
+    background-color: #FF3E79;
+    border-radius: 50%;
+}
+
+.burger-menu-open {
+    background-image: url(/assets/icons/burger-open.svg);
+}
+.call-button {
+    background-image: url(/assets/icons/call.svg);
+}
+.chat-button {
+    background-image: url(/assets/icons/message.svg);
+}
+.profile-button {
+    background-image: url(/assets/icons/profile.svg);
+}
+.repair-button {
+    background-image: url(/assets/icons/repair.svg);
+}
+.checkstatus-button {
+    background-image: url(/assets/icons/check.svg);
+}
+.burger-menu-close {
+    background-image: url(/assets/icons/burger-close.svg);
+}
+.search-button {
+    background-image: url(/assets/icons/search.svg);
+}
+
 
 
 /* ----- MAIN ----- */
@@ -229,8 +271,11 @@ ul, ul, li {
     align-items: center;
 }
 
-.button-readmore {
+.read-more-button-wrapper {
     margin-top: 16px;
+}
+
+.button-readmore {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.2px;
@@ -248,7 +293,10 @@ ul, ul, li {
 
 .button-readmore::before {
     content: '';
-    background-image: url(./../assets/icons/arrow.svg);
+    /* background-image: url(./../assets/icons/arrow.svg); */
+    
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='11' viewBox='0 0 8 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.50008 0.500076L4.00008 3.00008L1.50008 0.500076C1.22393 0.223933 0.776218 0.223933 0.500076 0.500076C0.223933 0.776218 0.223933 1.22393 0.500075 1.50008L3.29297 4.29297C3.68349 4.68349 4.31666 4.68349 4.70718 4.29297L7.50008 1.50008C7.77622 1.22393 7.77622 0.776218 7.50008 0.500076C7.22393 0.223933 6.77622 0.223933 6.50008 0.500076ZM6.50008 6.50008L4.00008 9.00008L1.50008 6.50008C1.22393 6.22393 0.776218 6.22393 0.500076 6.50008C0.223933 6.77622 0.223933 7.22393 0.500075 7.50008L3.29297 10.293C3.68349 10.6835 4.31666 10.6835 4.70718 10.293L7.50008 7.50008C7.77622 7.22393 7.77622 6.77622 7.50008 6.50008C7.22393 6.22393 6.77622 6.22393 6.50008 6.50008Z' fill='%2341F6D7'/%3E%3C/svg%3E");
+    
     width: 8px;
     height: 11px;
     margin-left: 8px;
@@ -262,22 +310,6 @@ ul, ul, li {
 .fullsize {
     max-height: none !important;
 }
-
-.services__content__description__btn:hover,
-.services__content__description__btn:active {
-    color: var(--read-more-btn);
-}
-
-.services__content__description__btn::before {
-    content: '';
-    background-image: url(./../assets/icons/arrow.svg);
-    width: 7px;
-    height: 10px;
-
-    margin-left: 8px;
-    margin-right: 16px;
-}
-
 /* ----- ASIDE ----- */
 
 .aside__container {
@@ -316,6 +348,7 @@ ul, ul, li {
 .aside__header__logo-group {
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
 .aside__menu__item__link {
@@ -436,10 +469,22 @@ ul, ul, li {
 }
 
 .card-button {
-    background-image: url(./../assets/icons/go.svg);
+    border: 2px solid #FF3E79;
+    border-radius: 50%;
     width: 40px;
     height: 40px;
 }
+.card-button::after {
+    content: '';
+    position: absolute;
+    border-right: 2px solid #FF3E79;
+    width: 7px;
+    height: 7px;
+    border-top: 2px solid #FF3E79;
+    border-radius: 1px;
+    transform: rotate(45deg) translate(-7px);
+}
+
 
 .card-button:active {
     transform: scale(0.95); 
@@ -569,7 +614,8 @@ ul, ul, li {
 
 @media (min-width: 550px) {
     .buttons-row__tablet-width {
-        display: inline;
+        display: flex;
+        align-items: center;
 
     }
 
@@ -611,14 +657,34 @@ ul, ul, li {
         display: none;
      }
 
-     .services__title__buttons-row .header__button {
+     .services__title__buttons-row {
+        /* gap: 0.7rem; */
+     }
+
+     .services__title__buttons-row {
         display: flex;
         align-items: center;
-        gap: 0.7rem;
+        gap: 0.8rem;
+     }
+
+     .title__buttons-row__button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+     }
+
+     .title__buttons-row__button-wrapper:hover .title__button {
+        transition: 0.1s;
+        color:#979797
+     }
+     .title__buttons-row__button-wrapper:active .title__button {
+        transform: scale(0.99);
+        transition: 0s;
      }
 
      .title__button {
         font-size: 16px;
+        font-weight: 400;
         line-height: 24px;
         letter-spacing: -0.2px;
         color: #1B1C21;
