--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,5 +1,7 @@
 .aside__container--modal {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .05s ease-out;
 
     position: fixed;
 	right: 0;
@@ -62,8 +64,8 @@
     border-radius: 8px;
 
     &:focus {
-        border: 1px solid $main-black-color;
-        outline: none;
+        //border: 1px solid $main-black-color;
+        outline: 1px solid $main-black-color;
     }
 }
 
