--- a/src/scss/_technical.scss
+++ b/src/scss/_technical.scss
@@ -36,6 +36,12 @@ tr, th {
     display: block !important;
 }
 
+.show-slow {
+    visibility: visible !important;
+    opacity: 1 !important;
+}
+
+
 .no-scroll {
     overflow: hidden !important;
 }
@@ -47,7 +53,12 @@ tr, th {
 }
 
 .blur-wrapper {
-    display: none;
+    //display: none;
+
+    visibility: hidden;
+    opacity: 0;
+    transition: all .05s ease-out;
+
     position: absolute;
     top: 0;
     left: 0;
